testcases/error/unenclosed_inner_if_expression.veryl
module unenclosed_inner_if_expression {
    let _a: logic = if 1'b1 ? if 1'b1 ? 1 : 0 : 0;
}
